# rust-ir-thermo

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config
.github/workflows/: rust.yml
docs/: sw.dia
examples/: test_buttons.rs  test_i2c_at24.rs  test_i2c_mlx90614.rs  test_i2cbb_at24.rs  test_i2cbb_temp.rs  test_lcd.rs  test_led.rs  test_rtfm.rs  test_rtic.rs  test_uart.rs  test_uart_ufmt.rs
src/: delay_timer.rs  event.rs  lib.rs  logger.rs  main.rs  state.rs
tools/: runner
