[package]
name = "rust-ir-thermo"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2018"

#autobins = false
autotests = false
autoexamples = false

[features]
default = ["i2c_hw"]
i2c_hw = []
i2c_bb = []

[dependencies]
embedded-hal = "0.2.4"
cortex-m-rt = "0.6.12"
cortex-m = "0.6.3"
bitbang-hal = "0.3.2"
mlx9061x = "0.1.0"
eeprom24x = "0.3.0"
hd44780-driver = "0.3.0"
ufmt = "0.1.0"
ufmt-write = "0.1.0"
cortex-m-rtic = "0.5.3"
heapless = "0.5.5"
nb = "1.0.0"

[dependencies.shared-bus]
version= "0.1.4"
features=["cortexm"]

#[dependencies.stm32l1xx-hal]
#version = "0.1.0"
#features = ["stm32l151", "rt"]

[dependencies.stm32l1xx-hal]
git = "https://github.com/geomatsi/stm32l1xx-hal"
branch = "integ"
features = ["stm32l151", "rt"]

[[example]]
name = "test-led"
path = "examples/test_led.rs"

[[example]]
name = "test-uart-fmt"
path = "examples/test_uart_fmt.rs"

[[example]]
name = "test-uart-ufmt"
path = "examples/test_uart_ufmt.rs"

[[example]]
name = "test-i2c-at24"
path = "examples/test_i2c_at24.rs"

[[example]]
name = "test-i2c-mlx90614"
path = "examples/test_i2c_mlx90614.rs"

[[example]]
name = "test-lcd"
path = "examples/test_lcd.rs"

[[example]]
name = "test-buttons"
path = "examples/test_buttons.rs"

[[example]]
name = "test-rtic"
path = "examples/test_rtic.rs"
